presskit page top spacing fix

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -46,7 +46,7 @@
 			width: 100%;
 		}
 		h1{
-			margin-top: 15px;
+			margin-top: 20px;
 			margin-bottom: 0px;
 
 			font-size: 20px;
